test/spec_vectors/load/fail/module_58.wat
(module (memory 0) (func $type-address-empty-in-load (i32.load (i32.load)) (drop)))